@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.2.15
+VERSION=1.2.16
 
-DEPENDENCY="zeda=1.2.20;zm=1.2.14"
+DEPENDENCY="zeda=1.2.20;zm=1.2.35"
